# jira-cli

./: Cargo.toml  README.md
.github/: clippy.yml  rustfmt.yml  tests.yml
src/: db.rs  jira.rs  main.rs  models.rs  test_utils.rs
